[package]
name = "sal_app"
version = "0.1.0"
authors = ["Michael Mullin <mimullin@blackberry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }

anyhow = "1.0"
libbpf-rs = "0.7.2"
libc = "0.2"
plain = "0.2"
lazy_static = "1.4.0"